--- a/assets/css/popular.css
+++ b/assets/css/popular.css
@@ -96,6 +96,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  border-radius: 10px;
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
