--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -148,6 +148,7 @@ img {
   font-weight: var(--font-semi-bold);
   display: flex;
   gap: 7px;
+  /* border-radius: 2px; */
 }
 
 .nav__toggle,
@@ -654,10 +655,22 @@ img {
   line-height: 3rem;
   color: #495057;
   background-color: #fff;
-  border: 2px solid #ced4da;
+  border: 2px solid black;
   border-radius: 0.8rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   margin-top: 20px;
 }
 
-
+.time-input{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.time-inputs input {
+  width: 100%; /* Ensure inputs take full width of container */
+  padding: 0.5rem; /* Add padding for better spacing */
+  font-size: 1rem; /* Set font size */
+  border: 1px solid #ced4da; /* Border style */
+  border-radius: 0.25rem; /* Rounded corners */
+  transition: border-color 0.15s ease-in-out; /* Transition effect */
+}
