--- a/assets/css/explore.css
+++ b/assets/css/explore.css
@@ -650,9 +650,10 @@ img {
 .form-select {
   display: block;
   width: 100%;
-  padding: 1rem 1rem;
+  /* padding: 5rem 5rem; */
+  padding: 5px;
   font-size: 1rem;
-  line-height: 3rem;
+  line-height: 4rem;
   color: #495057;
   background-color: #fff;
   border: 2px solid black;
@@ -668,9 +669,9 @@ img {
 }
 .time-inputs input {
   width: 100%; /* Ensure inputs take full width of container */
-  padding: 0.5rem; /* Add padding for better spacing */
+  padding: 5px; /* Add padding for better spacing */
   font-size: 1rem; /* Set font size */
-  border: 1px solid #ced4da; /* Border style */
-  border-radius: 0.25rem; /* Rounded corners */
+  border: 2px solid black; /* Border style */
+  border-radius: 0.8rem; /* Rounded corners */
   transition: border-color 0.15s ease-in-out; /* Transition effect */
 }
